# FAST-GA

./: .codacy.yml  .coverage.jojo87051.21924.978671  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  README.md  geometry_0.csv  geometry_1.csv  get_version.py  output.txt  output_abs2prom.txt  output_tree.txt  postBuild  pyproject.toml  pytest.ini  requirements.txt  tmp_saved_single_module_timings.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_release.yml  tests.yml
FAST-OAD_notebooks/01_tutorial/: 01_tutorial.ipynb  02_postprocessing.ipynb
FAST-OAD_notebooks/fast-oad-cs23/pre_processing/: Xfoil_pre_processing.ipynb
FAST-OAD_notebooks/fast-oad-cs23/tutorial/: 01_tutorial.ipynb  03_analysis.ipynb  04_load_analysis.ipynb  Count_Under_XDSM_Diag.py  configuration_optimizer.py  feedback_extractor.py  feedback_extractor_test.py  problem_extractor.py  test_count_xdsm.py  test_count_xdsm_2.py  time_modules.py  time_tests.py  xdsm_generator.py
FAST-OAD_notebooks/fast-oad-cs23/tutorial/data/: aircraft_polar.yml  beechcraft_76.xml  fastga_mdo.yml  payload_range.yml  propeller_coefficients.yml  reference_aircraft.xml
binder/: environment.yml  postBuild  requirements.txt
data/: weight_test.xml
docs/: conf.py  index.rst  refs.bib  requirements.txt
docs/documentation/models/: index.rst
docs/documentation/models/aerodynamics/: index.rst  neuralfoil.rst
docs/documentation/models/geometry/: index.rst  wing_tank_model.rst
integration_tests/mission_builder/: pytest.ini  test_mission_builder.py
integration_tests/mission_builder/data/: mission_run.yml  sizing_breguet.yml  sizing_mission_fastga.yml  source_input.xml
integration_tests/oad_process/: QUIT  Test_Generate_Block_Analysis.py  test_analysis_mode.py  test_mdo_process.py  test_oad_process.py  test_single_block_execution.py
integration_tests/oad_process/data/: Test_Generate_Block_Analysis.py  beechcraft_76.xml  geometry.yml  input_DO228.xml  input_P68.xml  input_be76.xml  input_be76_wing_pos.xml  input_be76_wing_pos_no_prop.xml  input_sr22.xml  input_sr22_wing_pos.xml  input_sr22_wing_pos_no_prop.xml  input_tbm900.xml  mdo_process.yml  oad_process_DO228.yml  oad_process_P68.yml  oad_process_be76.yml  oad_process_be76_mission_builder.yml  oad_process_be76_wing_pos.yml  oad_process_be76_wing_pos_no_prop.yml  oad_process_sr22.yml  oad_process_sr22_advance_wing_tank.yml  oad_process_sr22_mission_builder.yml  oad_process_sr22_mission_vector.yml  oad_process_sr22_neuralfoil.yml  oad_process_sr22_openvsp.yml  oad_process_sr22_wing_pos.yml  oad_process_sr22_wing_pos_no_prop.yml  oad_process_tbm900.yml  problem_inputs.xml  problem_outputs.xml  test.xml
src/: conftest.py
src/fastga/: __init__.py  conftest.py  models_modified.txt
src/fastga/command/: api.py
src/fastga/command/module_sequencing_optimizer/: Count_Under_XDSM_Diag.py  configuration_optimizer.py  feedback_extractor.py  feedback_extractor_test.py  tests  time_modules.py  time_tests.py  xdsm_generator.py
src/fastga/command/resources/: fastga.toml  fastga.xml  fastga.yml
src/fastga/command/unitary_tests/: dummy_classes.py  test_api.py  test_block_analysis.py
src/fastga/configurations/: fastga.yml
src/fastga/integration_tests/oad_process/: test_oad_process.py
src/fastga/models/: __init__.py  options.py  variable_description_register.py  variable_descriptions.txt
src/fastga/models/aerodynamics/: aero_center.py  aerodynamics.py  aerodynamics_high_speed.py  aerodynamics_low_speed.py  aerodynamics_stability_derivatives.py  compute_polar.py  constants.py  lift_equilibrium.py  load_factor.py  variable_descriptions.txt
src/fastga/models/geometry/: __init__.py  _geometry_htp_distance.py  constants.py  geometry.py  variable_descriptions.txt
src/fastga/models/handling_qualities/: compute_static_margin.py  handling_qualities.py  variable_descriptions.txt
src/fastga/models/hybrid_powertrain/: __init__.py  compute_hybrid_powertrain.py  test_hybrid_powertrain.py
src/fastga/models/load_analysis/: aerodynamic_loads.py  aerodynamic_loads_x57.py  aerostructural_loads.py  aerostructural_loads_x57.py  compute_wing_loading.py  loads.py  loads_x57.py  structural_loads.py  structural_loads_x57.py  variable_descriptions.txt
src/fastga/models/loops/: constants.py  update_wing_area.py  update_wing_area_advanced.py  update_wing_area_group.py  update_wing_area_simple.py  update_wing_position.py  variable_descriptions.txt
src/fastga/models/modify_config/: __init__.py  compute_config_mod.py  compute_fuselage_mod.py  compute_span.py  update_XML.py
src/fastga/models/performances/: __init__.py  drag_thrust.py  dynamic_equilibrium.py  mission.py  mission_HE.py  takeoff.py  takeoff_HE.py  variable_descriptions.txt
src/fastga/models/propulsion/: __init__.py  dict.py  propulsion.py  variable_descriptions.txt
src/fastga/models/weight/: __init__.py  constants.py  weight.py
src/fastga/source_data_files/: problem_outputs_Beechcraft_800nm_mda.xml
src/fastga/source_files/: Beechcraft_Duchess.xml  Cirrus_SR22.xml  Daher_TBM900.xml
src/fastga/tests/: __init__.py  testing_utilities.py
src/fastga/usage/: main.py
src/fastga/utils/: __init__.py  options_checkers.py  warnings.py
tests/: testing_utilities.py
tests/xfoil_exe/: get_xfoil.py
workdir/: oad_process.yml  oad_process_test.yml  problem_inputs.xml  problem_outputs.xml  problem_outputs_Beechcraft_800nm_mda.xml
workdir/config_opti_tmp/aerodynamics_highspeed/: oad_process_test.yml  problem_inputs.xml  problem_outputs.xml
workdir/config_opti_tmp/aerodynamics_lowspeed/: oad_process_test.yml  problem_inputs.xml  problem_outputs.xml
workdir/config_opti_tmp/geometry/: oad_process_test.yml  problem_inputs.xml  problem_outputs.xml
workdir/config_opti_tmp/performance/: oad_process_test.yml  problem_inputs.xml  problem_outputs.xml
workdir/config_opti_tmp/weight/: oad_process_test.yml  problem_inputs.xml  problem_outputs.xml
workdir/workdir/: geometry_0.csv  geometry_1.csv  mda_mission_results.csv  vlm_0.csv  vlm_1.csv
(+968 files in other folders)
