# Project metadata (PEP 621) ===============================================
[project]
name = "FAST-OAD-CS23"
version = "1.3.2"
description = "FAST-OAD-CS23 is a framework for performing rapid Overall Aircraft Design for General Aircraft"
readme = "README.md"
license = { text = "GPL-3.0-only" }
keywords = [
    "aircraft",
    "design",
    "multi-disciplinary"
]
authors = [
    {name = "Chung-Huan LIU", email = "Chung-huan.LIU@isae-supaero.fr"},
    {name = "Florent LUTZ", email = "Florent.LUTZ2@isae-supaero.fr"},
    {name = "Aurelien REYSSET", email = "Aurelien.REYSSET@isae-supaero.fr"},
    {name = "Eric NGUYEN VAN", email = "Eric.Nguyen_Van@onera.fr"}
]
requires-python = ">=3.10,<3.15"

# User dependencies ------------------------------------------------------------
dependencies = [
    # IMPORTANT: when modifying this list, docs/requirements.txt must be updated for
    # ReadTheDocs to be able to compile the documentation.
    # A pre-commit hook has been added to do this task. As a result, any modification
    # of poetry.lock file will modify docs/requirements.txt and make
    # the commit fail because "files were modified by this hook". In that case,
    # doing again the commit including changes in docs/requirements.txt will succeed.
    "fast-oad-core>=1.7.0,<2",
    "stdatm>=0.2.0,<1",
    "neuralfoil>=0.3.0,<1"
]

[project.urls]
homepage = "https://github.com/supaero-aircraft-design/FAST-GA"
documentation = "https://fast-ga.readthedocs.io/en/stable/"

# Entry points -----------------------------------------------------------------
[project.entry-points."fastoad.plugins"]
"cs23" = "fastga"

# Poetry settings ==============================================================
[tool.poetry]
requires-poetry = ">=2.0" # You should upgrade poetry to v2 using 'pipx upgrade poetry'
packages = [
    { include = "fastga", from = "src" },
]
exclude = ["**/unitary_tests/**"]

#  Suitable classifiers based on python requirement and license are not automatically added if classifiers are statically defined in the project section
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics"
]

# Development dependencies -----------------------------------------------------
# Development dependencies using Poetry groups instead of [project.optional-dependencies]
[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0"
pytest-cov = "^7.0"
coverage = { version = "^7.0", extras = ["toml"] }
nbval = "^0.11"
wrapt = "^2.0.1"

[tool.poetry.group.doc.dependencies]
sphinx = ">=7.1.2"
sphinx-rtd-theme = ">=2.0"
sphinxcontrib-bibtex = "^2.6.3"

[tool.poetry.group.lint.dependencies]
pre-commit = "^4.4.0"
nbstripout = "^0.6.0"
ruff = ">0.15.0, <0.16.0"

# Poetry plugins ==================================================
[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9" # Used for the poetry export hook in pre-commit


# Packaging system =============================================================
[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0"
 ]
build-backend = "poetry_dynamic_versioning.backend"

# Pytest settings ==============================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov-report term-missing --cov-report html --verbose"
testpaths = ["src"]
norecursedirs = ["dist", "build", ".tox", ".ipynb_checkpoints"]

# Coverage settings ============================================================
[tool.coverage.run]
branch = true
source = ["fastga"]
omit = ["*/test/*", "*/tests/*", "*/unitary_tests/*"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ = = .__main__.:"
]